--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "personal-task-planner-bot",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "agents": "node agents/agent-runner.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@notionhq/client": "^2.2.14",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
     "googleapis": "^131.0.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "@notionhq/client": "^2.2.14"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "telegraf": "^4.16.3",
+    "uuid": "^10.0.0"
   }
 }
-
